# MicroSpec

./: .gitignore  CMakeLists.txt  README.md
buiild/: CMakeCache.txt  Makefile  cmake_install.cmake
buiild/test/: DFAcheckOnMultipleCores  DFAcheckOnMultipleCoresWityActions  DFAcheckOnSingleCore  InputAndTableCheck  Makefile  cmake_install.cmake  mappingrulescheck  predictorCheck
include/: Action.h  MicroSpec.h  MicroSpec.hpp  MicroSpecPthread.h  MicroSpec_Pthread.hpp  Predictor.h  Predictor.hpp  Resources.h  Resources.hpp  Timer.hpp
src/: Action.cpp  MicroSpec.cpp  MicroSpecPthread.cpp  MicroSpec_Pthread.cpp  Predictor.cpp  Resources.cpp  Timer.cpp
test/: CMakeCache.txt  CMakeLists.txt  DFAcheckOnMultipleCores.cpp  DFAcheckOnMultipleCoresWityActions.cpp  DFAcheckOnSingleCore.cpp  InputAndTableCheck.cpp  LightWeightBenchmarks  Makefile  SpecDFAcheck.cpp  allDFAcheck.cpp  cmake_install.cmake  functioncheck.cpp  main.cpp  mappingrulescheck.cpp  predictorCheck.cpp  specDFAcheck.cpp  test
test/headercheck/: CMakeLists.txt
